# meta-dream

./: .gitignore  config.py  pyproject.toml
.github/workflows/: release.yaml
meta_dream/: worker.py
metastable-server/: .envrc  Cargo.toml  Dockerfile  docker-compose.yaml  fly.toml
metastable-server/src/: cli.rs  database.rs  error.rs  http.rs  main.rs  tracing.rs
metastable-server/src/http/: api.rs  request_id.rs
metastable-worker/: .dockerignore  pyproject.toml
metastable-worker/meta_dream/: cli.py  server.py  stable_diffusion.py  worker.py
