[tool.poetry]
name = "meta-dream"
version = "0.1.0"
description = ""
authors = ["Mikkel Kroman <mk@maero.dk>"]

[tool.poetry.scripts]
meta_dream = 'meta_dream.cli:main'

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
Flask = "^2.2.2"
boto3 = "^1.24.57"
diffusers = "0.2.4"
transformers = "^4.21.1"
scipy = "^1.9.0"
ftfy = "^6.1.1"
click = "^8.1.3"
pika = "^1.3.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyright = "^1.1.268"

[tool.pyright]
reportPrivateImportUsage = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

